--- a/PlaneBuilder/PlaneBuilder.csproj
+++ b/PlaneBuilder/PlaneBuilder.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,7 @@
       <PackageReference Include="Identity.Dapper" Version="0.8.3-alpha" />
       <PackageReference Include="Identity.Dapper.SqlServer" Version="0.8.3-alpha" />
       <PackageReference Include="Dapper" Version="2.0.35" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     </ItemGroup>
 
