--- a/PlaneBuilder/PlaneBuilder.csproj
+++ b/PlaneBuilder/PlaneBuilder.csproj
@@ -6,6 +6,8 @@
 
   
     <ItemGroup>
+      <PackageReference Include="Google.Apis" Version="1.46.0" />
+      <PackageReference Include="GoogleApi" Version="3.9.13" />
       <PackageReference Include="Identity.Dapper" Version="0.8.3-alpha" />
       <PackageReference Include="Identity.Dapper.SqlServer" Version="0.8.3-alpha" />
       <PackageReference Include="Dapper" Version="2.0.35" />
