--- a/PlaneBuilder/appsettings.json
+++ b/PlaneBuilder/appsettings.json
@@ -23,9 +23,15 @@
     //"Username": "sa"
     //   "Password": " "
   },
-    "DapperIdentityCryptography": {
-      "Key": "RTU0NkM4REYyNzhDRDU5MzEwNjlCNTIyRTY5NUQ0RjI=",
-      "IV": "U29tZVJlYWxseUNvb2xJVg=="
-    }
+  "DapperIdentityCryptography": {
+    "Key": "RTU0NkM4REYyNzhDRDU5MzEwNjlCNTIyRTY5NUQ0RjI=",
+    "IV": "U29tZVJlYWxseUNvb2xJVg=="
+  },
+
+  "APISecret": {
+    //"AviationStackKey":
+    //"TSAKey": 
+    //"GoogleKey": 
+  }
   
 }
