--- a/PlaneBuilder/PlaneBuilder.csproj
+++ b/PlaneBuilder/PlaneBuilder.csproj
@@ -7,6 +7,7 @@
 
   
     <ItemGroup>
+      <PackageReference Include="bootstrap" Version="4.5.0" />
       <PackageReference Include="Google.Apis" Version="1.46.0" />
       <PackageReference Include="GoogleApi" Version="3.9.13" />
       <PackageReference Include="Identity.Dapper" Version="0.8.3-alpha" />
